--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Projects</a></li>
-                <li><a href="/connor-mckelvey-resume.pdf" download>Resume</a></li>
+                <li><a href="connor-mckelvey-resume.pdf" download>Resume</a></li>
                 <li><a href="https://discord.gg/QVRXrZTN" target="_blank">Contact</a></li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="/images/user.jpg">
+                <img src="images/user.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="abt-title">About Me</h1>
@@ -103,7 +103,7 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="worklist">
             <div class="work">
-                <img src="/images/fireball_logo_warring.jpg">
+                <img src="images/fireball_logo_warring.jpg">
                 <div class="layer">
                     <h3>Fireball Dice Roller Bot</h3>
                     <p>This is a Discord bot used in ~100 unique servers with thousands of users. It includes many polished embeded commands for simulating dice roles. This bot was developed during the pandemic when many rpg groups moved to online tools like Discord to hold their games.</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/krazystudio.png">
+                <img src="images/krazystudio.png">
                 <div class="layer">
                     <h3>Krazy Studios</h3>
                     <p>This is an organization that I run that offers different discord services. We are a team of programmers, artists, and music producers, who help build both servers and applications for our clients. The process of running this org. has given me exprience in leadership, advertisement, and monitazation stratagys.</p>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/password_logo.png">
+                <img src="images/password_logo.png">
                 <div class="layer">
                     <h3>Password Tool</h3>
                     <p>This is a desktop application built in python using customtkinter. This tool allows you to save and generate passwords for all of your websites or other needs. The passwords are saved locally on an exel sheet.</p>
@@ -146,9 +146,9 @@
                     <a href="https://www.linkedin.com/in/connor-mckelvey-8591a6201/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://twitter.com/KrazyStudios9"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.buymeacoffee.com/krazystudios"><i class="fa-solid fa-hand-holding-dollar"></i></a>
-                    <a href="/connor-mckelvey-resume.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
+                    <a href="connor-mckelvey-resume.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
                 </div>
-                <a href="/connor-mckelvey-resume.pdf" download class="btn">Download Resume</a>
+                <a href="connor-mckelvey-resume.pdf" download class="btn">Download Resume</a>
             </div>
             <div class="col-right">
                 <form name="submit-to-google-sheet">
